--- a/src/Componentes/App.css
+++ b/src/Componentes/App.css
@@ -20,6 +20,18 @@ img {
     margin: 10px;
 }
 .itemDetail {
-    max-width: 540px;
-    margin-top: 25px;
+    max-width: 600px;
+    margin-top: 80px;
+}
+
+.boton { 
+    color: black;
+    margin: 10px;
+
+}
+
+.cart { 
+    background: fixed;
+    border-color: blue;
+    border-radius: 15px;
 }
